log
Sun 16 Oct 2022 08:44:08 PM UTC: 
 tests:  0|4
total_score: 0/70
f60e1ba
Sun 16 Oct 2022 10:30:56 PM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
bd0dee6
Sun 16 Oct 2022 10:41:25 PM UTC: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
59efeab
Sun 16 Oct 2022 10:41:34 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
cb57243
Sun 16 Oct 2022 11:04:28 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c:24:1: error: expected identifier or ‘(’ before ‘}’ token
   24 | }
      | ^
Compilation failed
30a7cf8
Sun 16 Oct 2022 11:04:36 PM UTC: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|2
total_score: 20/70
868727e
